--- a/apple-clone/package.json
+++ b/apple-clone/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-responsive": "^8.0.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-responsive": "^9.0.0-beta.6",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
