--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 # Created by https://www.toptal.com/developers/gitignore/api/nextjs
 # Edit at https://www.toptal.com/developers/gitignore?templates=nextjs
 
+/node_modules
+
+.DS_Store
+.env.local
+.env.development.local.env.test.local.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 ### NextJS ###
 # Next build dir
 /.next
